# naics-gemini

./: .gitconfig  .gitconfig.example  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  .pre-commit-setup.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  LICENSE  Makefile  README.html  README.md  TEST_COVERAGE_ANALYSIS.md  cli.py  mkdocs.yml  pyproject.toml  scratch.ipynb  scratch2.ipynb
.github/workflows/: docs.yml  tests.yml
archive/: cli.py
conf/: config.yaml
conf/curriculum/: 01_stage.yaml  02_stage.yaml  03_stage.yaml  04_stage.yaml  05_stage.yaml  chain_default.yaml
conf/data/: distances.yaml  download.yaml  relations.yaml  triplets.yaml
conf/graph_curriculum/: 01_graph.yaml  02_graph.yaml  03_graph.yaml  04_graph.yaml  05_graph.yaml  06_graph.yaml  chain_graph.yaml
conf/text_curriculum/: 01_text.yaml  02_text.yaml  03_text.yaml  04_text.yaml  05_text.yaml  chain_text.yaml
docs/: .nav.yml  EVALUATION_INTEGRATION_GUIDE.md  README.md  architecture.md  cli_quickstart.md  curriculum_design_guide.md  dataset_specification.md  hgcn_training.md  index.md  literature.md  overview.md  quickstart.md  text_training.md  training.md  troubleshooting.md  usage.md
docs/api/: backend.md  cli.md  compute_distances.md  compute_relations.md  config.md  config_tools.md  console.md  contrastive_loss.md  create_triplets.md  datamodule.md  download_data.md  encoder.md  evaluate_training.md  evaluation.md  hgcn.md  hgcn_datamodule.md  hgcn_streaming_dataset.md  hierarchy_preservation_loss.md  hyperbolic.md  loss.md  metrics_tools.md  moe.md  rank_order_preservation_loss.md  streaming_dataset.md  tokenization_cache.md  training_utils.md  utilities.md  validation.md  warnings.md
docs/css/: custom.css
outputs/: 01_text_after_fixes_analysis.md  01_text_evaluation_analysis.md  batch_size_vs_negatives_analysis.md  rank_order_loss_analysis.md
outputs/01_stage/version_0/: events.out.tfevents.1762973381.150-136-154-165.6707.0  events.out.tfevents.1763044647.192-222-53-114.17423.0  hparams.yaml
outputs/01_stage/version_1/: events.out.tfevents.1762974109.150-136-154-165.7423.0  events.out.tfevents.1763044959.192-222-53-114.18118.0
outputs/01_stage/version_10/: events.out.tfevents.1762976501.150-136-154-165.13984.0  events.out.tfevents.1762986734.192-222-52-90.8597.0
outputs/01_stage/version_11/: events.out.tfevents.1762976707.150-136-154-165.14512.0  events.out.tfevents.1762986968.192-222-52-90.9583.0
outputs/01_stage/version_12/: events.out.tfevents.1762987111.192-222-52-90.10524.0
outputs/01_stage/version_2/: events.out.tfevents.1762974870.150-136-154-165.9776.0  events.out.tfevents.1763045052.192-222-53-114.18431.0
outputs/01_stage/version_3/: events.out.tfevents.1762975178.150-136-154-165.10830.0  events.out.tfevents.1763045125.192-222-53-114.18717.0
outputs/01_stage/version_4/: events.out.tfevents.1762975387.150-136-154-165.11261.0  events.out.tfevents.1763045350.192-222-53-114.19262.0
outputs/01_stage/version_5/: events.out.tfevents.1762975543.150-136-154-165.11717.0  events.out.tfevents.1763045499.192-222-53-114.19565.0
outputs/01_stage/version_6/: events.out.tfevents.1762975620.150-136-154-165.12123.0  events.out.tfevents.1763046409.192-222-53-114.23904.0
outputs/01_stage/version_7/: events.out.tfevents.1762975701.150-136-154-165.12513.0  events.out.tfevents.1762986055.192-222-52-90.5023.0  events.out.tfevents.1763046606.192-222-53-114.24885.0
outputs/01_stage/version_8/: events.out.tfevents.1762975808.150-136-154-165.12944.0  events.out.tfevents.1762986373.192-222-52-90.6404.0  events.out.tfevents.1763046745.192-222-53-114.25574.0
outputs/01_stage/version_9/: events.out.tfevents.1762976270.150-136-154-165.13385.0  events.out.tfevents.1762986529.192-222-52-90.7511.0
outputs/01_text/version_0/: events.out.tfevents.1763321866.192-222-53-102.235718.0
outputs/01_text/version_1/: events.out.tfevents.1763321927.192-222-53-102.236320.0
outputs/01_text/version_2/: events.out.tfevents.1763322046.192-222-53-102.237174.0  hparams.yaml
outputs/01_text/version_3/: events.out.tfevents.1763322977.192-222-53-102.243552.0  hparams.yaml
outputs/01_text/version_4/: events.out.tfevents.1763323863.192-222-53-102.249592.0  hparams.yaml
outputs/01_text/version_5/: events.out.tfevents.1763325208.192-222-53-102.259602.0
outputs/01_text/version_6/: events.out.tfevents.1763326699.192-222-53-102.270380.0  hparams.yaml
outputs/01_text/version_7/: events.out.tfevents.1763327941.192-222-53-102.282303.0
outputs/01_text/version_8/: events.out.tfevents.1763465646.192-222-53-17.10004.0
outputs/02_stage/version_0/: events.out.tfevents.1763047210.192-222-53-114.27776.0
outputs/02_text/version_0/: events.out.tfevents.1763470589.192-222-53-17.52635.0  hparams.yaml
reports/: hgcn_curriculum.md  hgcn_training_monitor.md  quarto_mkdocs.md
scripts/: create_refactor_issues.sh  format_code.sh  lambda-setup.sh  setup.sh  zshrc.local.example
site/: 404.html  index.html  objects.inv  sitemap.xml
site/architecture/: index.html
site/hgcn_training/: index.html
site/text_training/: index.html
site/usage/: index.html
src/: train.py
src/naics_embedder/: cli.py
src/naics_gemini/: cli.py  train.py
tests/: README.md  conftest.py
tests/unit/: test_cli_commands.py  test_cli_training.py  test_config.py  test_curriculum.py  test_data_distances.py  test_data_download.py  test_data_relations.py  test_data_triplets.py  test_datamodule.py  test_encoder.py  test_evaluation.py  test_graph_curriculum.py  test_graph_preprocessing.py  test_hard_negative_mining.py  test_hgcn.py  test_hgcn_datamodule.py  test_hgcn_metrics.py  test_hgcn_streaming_dataset.py  test_hierarchy_metrics.py  test_hyperbolic.py  test_hyperbolic_clustering.py  test_loss.py  test_moe.py  test_naics_model.py  test_stage4_verification.py  test_streaming_dataset.py  test_streaming_sampling.py  test_tokenization_cache.py  test_utils_backend.py  test_utils_console.py  test_utils_hyperbolic.py  test_utils_training.py  test_utils_utilities.py  test_utils_validation.py
tutorials/: styles.css
(+142 files in other folders)
