[project]
name = 'naics-embedder'
version = '0.2.0'
description = 'Cross-platform NAICS embeddings and text-hierarchy modeling project.'
requires-python = '>=3.10'

dependencies = [
    'torch>=2.4.0,!=2.5.1', # Exclude 2.5.1 which lacks macOS ARM64 wheels
    'pytorch-lightning>=2.4',
    'transformers[torch]>=4.46',
    'accelerate>=1.2',
    'peft>=0.13',
    'typer>=0.12',
    'polars>=1.9',
    'pyarrow>=17.0',
    'networkx>=3.4',
    'httpx>=0.28',
    'openpyxl>=3.1',
    'scipy>=1.13',
    'scikit-learn>=1.5',
    'tqdm>=4.67',
    "fastexcel>=0.16.0",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "pydantic>=2.12.4",
    "selenium>=4.38.0",
    "great-tables>=0.20.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings>=0.30.1",
    "mkdocstrings-python>=1.14.0",
    "pymdown-extensions>=10.17.1",
    "torch-geometric>=2.7.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "mkdocs-awesome-nav>=3.2.0",
]

[project.scripts]
naics-embedder = 'naics_embedder.cli:app'


[dependency-groups]
dev = [
    'yapf>=0.43.0',
    'ruff>=0.6',
    'rich>=13.9',
    'yamllint>=1.37.1',
    'pytest>=8.3',
    'pytest-cov>=5.0',
    'pytest-mock>=3.14',
    'pytest-xdist>=3.6',
    'hypothesis>=6.100',
    'pytest-benchmark>=4.0',
]


# -------------------------------------------------------------------------------------------------
# UV settings:
#   1. Indices: PyTorch wheel registries for mps & cuda
#.  2. Sources: Platform-dependent resolution
# -------------------------------------------------------------------------------------------------

[tool.uv]
package = true
# --- Tell uv to ensure compatible wheels exist for both macOS ARM64 and Linux x86_64 ---
environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]


# -------------------------------------------------------------------------------------------------
# Ruff + YAPF configuration:
#   1. Prefer single quotes
#   2. Two blank lines after defs/classes, one elsewhere
#   3. Vertical, dot-aligned method chaining
#   4. Semantic section dividers preserved
# -------------------------------------------------------------------------------------------------

[tool.ruff]
line-length = 100
indent-width = 4
target-version = 'py310'
extend-exclude = ['*.md', '*.ipynb']

[tool.ruff.lint]
# Linting rules
select = ['E', 'F', 'I', 'Q']

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
docstring-quotes = 'single'

[tool.ruff.format]
# Formatting behavior
quote-style = 'preserve'
indent-style = 'space'
docstring-code-format = true
docstring-code-line-length = 'dynamic'


# -------------------------------------------------------------------------------------------------
# YAPF - handles detailed spacing, chaining, and section divider rules
# -------------------------------------------------------------------------------------------------

[tool.yapf]
based_on_style = 'pep8'
column_limit = 100

# --- Spacing & blank lines (2 after defs/classes) ---
blank_lines_around_top_level_definition = 1
blank_line_before_nested_class_or_def = true
join_multiple_lines = false

# --- Chaining and indentation ---
split_before_dot = true
split_before_logical_operator = true
align_closing_bracket_with_visual_indent = true
dedent_closing_brackets = true
continuation_indent_width = 4
split_before_first_argument = false
split_before_closing_bracket = true

# --- Preserve manual line breaks & semantic dividers ---
coalesce_brackets = false
split_penalty_after_opening_bracket = 10000
split_penalty_for_added_line_split = 10000
split_penalty_excess_character = 10000
allow_multiline_lambdas = true


# -------------------------------------------------------------------------------------------------
# Pytest configuration
# -------------------------------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ['tests']
python_files = ['test_*.py']
python_classes = ['Test*']
python_functions = ['test_*']
addopts = [
    '-v',
    '--strict-markers',
    '--tb=short',
]
markers = [
    'unit: Unit tests',
    'integration: Integration tests',
    'slow: Slow tests requiring significant compute',
    'gpu: Tests requiring GPU',
]
filterwarnings = [
    'ignore::DeprecationWarning',
    'ignore::PendingDeprecationWarning',
]


# -------------------------------------------------------------------------------------------------
# Coverage configuration
# -------------------------------------------------------------------------------------------------

[tool.coverage.run]
source = ['src/naics_embedder']
omit = [
    '*/tests/*',
    '*/__init__.py',
    '*/cli.py',
]

[tool.coverage.report]
exclude_lines = [
    'pragma: no cover',
    'def __repr__',
    'raise AssertionError',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    '@abstractmethod',
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = 'htmlcov'
